--- a/build.gradle
+++ b/build.gradle
@@ -5,15 +5,17 @@ plugins {
 group 'aticatac'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11
 
 repositories {
     mavenCentral()
 }
+jar {
+    into 'resources', {
+        from 'resources'
+    }
+}
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/log4j/log4j
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-
 }
