--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,9 +1,28 @@
 plugins {
     id 'java'
+//    id 'application'
+    id 'org.openjfx.javafxplugin' version '0.0.7'
 }
+repositories {
+    mavenCentral()
+}
+javafx {
+    modules = ['javafx.graphics', 'javafx.fxml','javafx.controls']
+}
+javafx {
+    version = "11.0.+"
+}
+jar {
+    into 'resources', {
+        from 'resources'
+    }
+}
+//application {
+//    mainClassName = "$moduleName/com.aticatac.menus.Main"
+//}
 
 
-sourceCompatibility = 1.8
+sourceCompatibility = 11.0
 
 repositories {
     mavenCentral()
@@ -11,4 +30,15 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/log4j/log4j
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+
+//    implementation 'org.openjfx:javafx-web:12-ea+9'
+//    implementation 'org.openjfx:javafx-swing:12-ea+9'
+//    implementation 'org.openjfx:javafx-media:11-ea+19'
+//    implementation 'org.openjfx:javafx-graphics:11-ea+19'
+//    implementation 'org.openjfx:javafx-fxml:11-ea+19'
+//    implementation 'org.openjfx:javafx-controls:11-ea+19'
+//    implementation 'org.openjfx:javafx:11-ea+19'
+//    implementation 'org.openjfx:javafx-base:11'
 }
