--- a/server/build.gradle
+++ b/server/build.gradle
@@ -3,7 +3,7 @@ plugins {
 }
 
 
-sourceCompatibility = 1.8
+//sourceCompatibility = 11.0
 
 repositories {
     mavenCentral()
@@ -11,4 +11,6 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/log4j/log4j
+    compile group: 'log4j', name: 'log4j', version: '1.2.17'
 }
