--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,9 +1,18 @@
 plugins {
     id 'java'
+    id 'org.openjfx.javafxplugin' version '0.0.5'
+}
+repositories {
+    mavenCentral()
+}
+javafx {
+    modules = ['javafx.graphics', 'javafx.fxml', 'javafx.controls']
+}
+javafx {
+    version = "11.0.+"
 }
 
-
-sourceCompatibility = 1.9
+sourceCompatibility = 11.0
 
 repositories {
     mavenCentral()
@@ -11,4 +20,9 @@ repositories {
 
 dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
+    // https://mvnrepository.com/artifact/log4j/log4j
+    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    compile project(':common')
 }
