--- a/client/build.gradle
+++ b/client/build.gradle
@@ -24,5 +24,7 @@ dependencies {
     implementation group: 'log4j', name: 'log4j', version: '1.2.17'
     // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    // reflections
+    implementation 'org.reflections:reflections:0.9.11'
     compile project(':common')
 }
