--- a/server/build.gradle
+++ b/server/build.gradle
@@ -9,7 +9,7 @@ buildscript {
 plugins {
     id 'java'
     id 'application'
-    id 'docker'
+//    id 'docker'
 }
 application {
     mainClassName = "com.aticatac.server.Main"
