--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,16 @@
-plugins {
-    id 'java'
-}
-
 group 'aticatac'
 version '1.0-SNAPSHOT'
 
-sourceCompatibility = 11.0
+subprojects {
+    apply plugin: 'java'
+    sourceCompatibility = 1.11
+    targetCompatibility = 1.11
+    dependencies {
+        testCompile group: 'junit', name: 'junit', version: '4.12'
+        implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+    }
+}
 
 repositories {
     mavenCentral()
-}
-
-dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
 }
