--- a/client/build.gradle
+++ b/client/build.gradle
@@ -1,10 +1,16 @@
 plugins {
-    id 'java'
+    id 'application'
     id 'org.openjfx.javafxplugin' version '0.0.5'
+    id "org.sglahn.gradle-dockerfile-plugin" version "0.4"
 }
+application {
+    mainClassName = "com.aticatac.client.networking.singleplayer.Main"
+}
+
 repositories {
     mavenCentral()
 }
+
 javafx {
     modules = ['javafx.graphics', 'javafx.fxml', 'javafx.controls']
 }
@@ -12,19 +18,11 @@ javafx {
     version = "11.0.+"
 }
 
-sourceCompatibility = 11.0
-
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/log4j/log4j
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
-    // reflections
     implementation 'org.reflections:reflections:0.9.11'
     compile project(':common')
 }
+
+dockerBuild.dependsOn(distTar)
+dockerPush.dependsOn(dockerBuild)
