--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,40 +1,20 @@
-
-buildscript {
-    repositories { jcenter() }
-    dependencies {
-        classpath 'se.transmode.gradle:gradle-docker:1.2'
-    }
-}
-
 plugins {
-    id 'java'
     id 'application'
-//    id 'docker'
+    id "org.sglahn.gradle-dockerfile-plugin" version "0.4"
 }
+
 application {
-    mainClassName = "com.aticatac.server.Main"
+    mainClassName = "com.aticatac.server.networking.singleplayer.Main"
 }
-apply plugin: 'docker'
-
-docker {
-    baseImage "openjdk:11-jre-slim"
-    maintainer 'Charles de Freitas "ypph279@gmail.com"'
-}
-
-
-sourceCompatibility = 11.0
-targetCompatibility = 11.0
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/log4j/log4j
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
-    // https://mvnrepository.com/artifact/org.apache.commons/commons-lang3
     implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
-
     compile project(':common')
 }
+
+dockerBuild.dependsOn(distTar)
+dockerPush.dependsOn(dockerBuild)
