--- a/common/build.gradle
+++ b/common/build.gradle
@@ -1,14 +1,8 @@
-plugins {
-    id 'java'
-}
-
-
-sourceCompatibility = 11.0
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
 }
