--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,18 +1,20 @@
 plugins {
-    id 'java'
+    id 'application'
+    id "org.sglahn.gradle-dockerfile-plugin" version "0.4"
 }
 
-
-sourceCompatibility = 11.0
+application {
+    mainClassName = "com.aticatac.server.networking.singleplayer.Main"
+}
 
 repositories {
     mavenCentral()
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/log4j/log4j
-    compile group: 'log4j', name: 'log4j', version: '1.2.17'
-
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     compile project(':common')
 }
+
+dockerBuild.dependsOn(distTar)
+dockerPush.dependsOn(dockerBuild)
