--- a/build.gradle
+++ b/build.gradle
@@ -1,16 +1,25 @@
-group 'aticatac'
-version '1.0-SNAPSHOT'
-
 subprojects {
+    group 'aticatac'
+    version '1.0-SNAPSHOT'
     apply plugin: 'java'
     sourceCompatibility = 1.11
     targetCompatibility = 1.11
+    repositories {
+        mavenCentral()
+    }
     dependencies {
         testCompile group: 'junit', name: 'junit', version: '4.12'
         implementation group: 'log4j', name: 'log4j', version: '1.2.17'
+        implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+    }
+    ext {
+        appName = "my-gdx-com.mygdx.game"
+        gdxVersion = '1.9.9'
+        roboVMVersion = '2.3.5'
+        box2DLightsVersion = '1.4'
+        ashleyVersion = '1.7.0'
+        aiVersion = '1.8.0'
     }
 }
 
-repositories {
-    mavenCentral()
-}
+
