--- a/server/build.gradle
+++ b/server/build.gradle
@@ -7,13 +7,12 @@ application {
     mainClassName = "com.aticatac.server.networking.Main"
 }
 
-repositories {
-    mavenCentral()
-}
-
 dependencies {
-    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
     compile project(':common')
+}
+task execServer(type: JavaExec) {
+    main = "com.aticatac.server.networking.singleplayer.Main"
+    classpath = sourceSets.main.runtimeClasspath
 }
 
 dockerBuild.dependsOn(distTar)
