--- a/client/build.gradle
+++ b/client/build.gradle
@@ -9,6 +9,8 @@ application {
 dependencies {
     implementation 'org.reflections:reflections:0.9.11'
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
     compile project(':common')
 }
 
