--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,17 +1,19 @@
 plugins {
-    id 'java'
+    id 'application'
+    id "org.sglahn.gradle-dockerfile-plugin" version "0.4"
 }
 
-
-sourceCompatibility = 1.9
-
-repositories {
-    mavenCentral()
+application {
+    mainClassName = "com.aticatac.server.networking.Main"
 }
 
 dependencies {
-    testCompile group: 'junit', name: 'junit', version: '4.12'
-    // https://mvnrepository.com/artifact/log4j/log4j
-    implementation group: 'log4j', name: 'log4j', version: '1.2.17'
     compile project(':common')
 }
+task execServer(type: JavaExec) {
+    main = "com.aticatac.server.networking.singleplayer.Main"
+    classpath = sourceSets.main.runtimeClasspath
+}
+
+dockerBuild.dependsOn(distTar)
+dockerPush.dependsOn(dockerBuild)
