--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,17 +10,53 @@ services:
     image: 'server:testing'
     build:
       context: './server'
-    #      args:
-    #        - VERSION=$VERSION
     networks:
       - 'lan'
 
-  client:
+  client1:
     container_name: 'client'
     image: 'client:testing'
     build:
       context: './client'
-    #      args:
-    #        - VERSION=$VERSION
     networks:
       - 'lan'
+    depends_on:
+      - 'server'
+  client2:
+    container_name: 'client2'
+    image: 'client:testing'
+    build:
+      context: './client'
+    networks:
+      - 'lan'
+    depends_on:
+      - 'server'
+  client3:
+    container_name: 'client3'
+    image: 'client:testing'
+    build:
+      context: './client'
+    networks:
+      - 'lan'
+    depends_on:
+      - 'server'
+
+  client4:
+    container_name: 'client4'
+    image: 'client:testing'
+    build:
+      context: './client'
+    networks:
+      - 'lan'
+    depends_on:
+      - 'server'
+
+  client5:
+    container_name: 'client5'
+    image: 'client:testing'
+    build:
+      context: './client'
+    networks:
+      - 'lan'
+    depends_on:
+      - 'server'
