--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,46 +13,8 @@ services:
     networks:
       - 'lan'
 
-  client1:
+  client:
     container_name: 'client'
-    image: 'client:testing'
-    build:
-      context: './client'
-    networks:
-      - 'lan'
-    depends_on:
-      - 'server'
-  client2:
-    container_name: 'client2'
-    image: 'client:testing'
-    build:
-      context: './client'
-    networks:
-      - 'lan'
-    depends_on:
-      - 'server'
-  client3:
-    container_name: 'client3'
-    image: 'client:testing'
-    build:
-      context: './client'
-    networks:
-      - 'lan'
-    depends_on:
-      - 'server'
-
-  client4:
-    container_name: 'client4'
-    image: 'client:testing'
-    build:
-      context: './client'
-    networks:
-      - 'lan'
-    depends_on:
-      - 'server'
-
-  client5:
-    container_name: 'client5'
     image: 'client:testing'
     build:
       context: './client'
