--- a/server/src/main/resources/log4j.properties
+++ b/server/src/main/resources/log4j.properties
@@ -1,6 +1,6 @@
 # Define the root logger with appender file
 #log = log
-log4j.rootLogger=off, stdout
+log4j.rootLogger=INFO, stdout
 
 
 # Direct log messages to stdout
