--- a/client/build.gradle
+++ b/client/build.gradle
@@ -8,6 +8,7 @@ application {
 
 dependencies {
     implementation 'org.reflections:reflections:0.9.11'
+    implementation 'com.google.code.gson:gson:2.8.5'
     compile "com.badlogicgames.gdx:gdx:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
     compile "com.badlogicgames.gdx:gdx-freetype:$gdxVersion"
