--- a/docker-compose-clients.yml
+++ b/docker-compose-clients.yml
@@ -17,51 +17,51 @@ services:
     networks:
       - 'lan'
 
-  client3:
-    container_name: 'client3'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client4:
-    container_name: 'client4'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client5:
-    container_name: 'client5'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client6:
-    container_name: 'client6'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client7:
-    container_name: 'client7'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client8:
-    container_name: 'client8'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client9:
-    container_name: 'client9'
-    image: 'client'
-    networks:
-      - 'lan'
-
-  client10:
-    container_name: 'client10'
-    image: 'client'
-    networks:
-      - 'lan'
-
+#  client3:
+#    container_name: 'client3'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client4:
+#    container_name: 'client4'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client5:
+#    container_name: 'client5'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client6:
+#    container_name: 'client6'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client7:
+#    container_name: 'client7'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client8:
+#    container_name: 'client8'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client9:
+#    container_name: 'client9'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
+#  client10:
+#    container_name: 'client10'
+#    image: 'client'
+#    networks:
+#      - 'lan'
+#
