new map and tanks..scrolling needs some work as speeding up the tank.

--- a/server/build.gradle
+++ b/server/build.gradle
@@ -10,6 +10,9 @@ application {
 dependencies {
     compile project(':common')
     compile 'org.apache.commons:commons-collections4:4.1'
+    compile "com.badlogicgames.gdx:gdx-backend-lwjgl:$gdxVersion"
+    compile "com.badlogicgames.gdx:gdx-platform:$gdxVersion:natives-desktop"
+    compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
 }
 task execServer(type: JavaExec) {
     main = "com.aticatac.server.Main"
