--- a/build.gradle
+++ b/build.gradle
@@ -26,6 +26,7 @@ subprojects {
         testCompile group: 'junit', name: 'junit', version: '4.12'
         implementation group: 'log4j', name: 'log4j', version: '1.2.17'
         implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.8.1'
+        compile 'org.jetbrains:annotations:16.0.1'
     }
     ext {
         appName = "my-gdx-com.mygdx.game"
