--- a/server/build.gradle
+++ b/server/build.gradle
@@ -1,6 +1,7 @@
 plugins {
     id 'application'
     id "org.sglahn.gradle-dockerfile-plugin" version "0.4"
+
 }
 
 application {
@@ -9,6 +10,7 @@ application {
 
 dependencies {
     compile project(':common')
+    implementation 'com.google.guava:guava:27.1-jre'
     
 }
 task execServer(type: JavaExec) {
