--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -2,13 +2,13 @@ version: '3.5'
 
 services:
   postgres:
-    container_name: 'tanknite'
+    container_name: 'postgres'
     image: 'postgres'
     restart: 'always'
     environment:
       POSTGRES_PASSWORD: 'example'
       POSTGRES_USER: 'example'
-      POSTGRES_DB: 'tanknite'
+      POSTGRES_DB: 'aticatac'
     ports:
       - 5432:5432
   adminer:
@@ -17,3 +17,11 @@ services:
     restart: always
     ports:
       - 8080:8080
+  aticatac:
+    container_name: 'aticatac'
+    image: 'aticatac'
+    restart: 'always'
+    build: '.'
+    ports:
+      - 6000:6000
+
