--- a/database/docker-compose.yml
+++ b/database/docker-compose.yml
@@ -12,12 +12,16 @@ services:
     ports:
       - 5432:5432
   adminer:
+    depends_on:
+      - postgres
     container_name: 'adminer'
     image: adminer
     restart: always
     ports:
       - 8080:8080
   aticatac:
+    depends_on:
+      - postgres
     container_name: 'aticatac'
     image: 'aticatac'
     restart: 'always'
