--- a/build.gradle
+++ b/build.gradle
@@ -66,7 +66,7 @@ project(':client') {
         compile "com.badlogicgames.gdx:gdx-box2d-platform:$gdxVersion:natives-desktop"
         compile "com.badlogicgames.gdx:gdx-freetype-platform:$gdxVersion:natives-desktop"
     }
-    task execDesktop(type: JavaExec) {
+    task play(type: JavaExec) {
         main = "com.aticatac.client.desktop.DesktopLauncher"
         classpath = sourceSets.main.runtimeClasspath
         jvmArgs '--illegal-access=deny'
