--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 allprojects {
     group 'aticatac'
     apply plugin: 'java'
+    apply plugin: 'jacoco'
     sourceCompatibility = 1.11
     targetCompatibility = 1.11
     repositories {
@@ -31,6 +32,30 @@ allprojects {
     test {
         useJUnitPlatform()
     }
+    test.useTestNG()
+}
+task codeCoverageReport(type: JacocoReport) {
+
+    // Gather execution data from all subprojects
+    // (change this if you e.g. want to calculate unit test/integration test coverage separately)
+    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
+
+    // Add all relevant sourcesets from the subprojects
+    subprojects.each {
+        sourceSets it.sourceSets.main
+    }
+
+    reports {
+        xml.enabled true
+        html.enabled true
+//        html.destination "${buildDir}/reports/jacoco"
+        csv.enabled false
+    }
+}
+
+// always run the tests before generating the report
+codeCoverageReport.dependsOn {
+    subprojects*.test
 }
 
 project(':common') {
