--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,9 @@ jdk:
 
 script:
   - ./gradlew build
-
+  - ./gradlew codeCoverageReport
+after_success:
+  - bash <(curl -s https://codecov.io/bash)
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
   - rm -fr $HOME/.gradle/caches/*/plugin-resolution/
