--- a/build.gradle
+++ b/build.gradle
@@ -32,31 +32,18 @@ allprojects {
     test {
         useJUnitPlatform()
     }
-    test.useTestNG()
 }
-task codeCoverageReport(type: JacocoReport) {
-
-    // Gather execution data from all subprojects
-    // (change this if you e.g. want to calculate unit test/integration test coverage separately)
-    executionData fileTree(project.rootDir.absolutePath).include("**/build/jacoco/*.exec")
-
-    // Add all relevant sourcesets from the subprojects
-    subprojects.each {
-        sourceSets it.sourceSets.main
-    }
-
+jacoco {
+    toolVersion = "0.8.3"
+    reportsDir = file("$buildDir/customJacocoReportDir")
+}
+jacocoTestReport {
     reports {
         xml.enabled true
-        html.enabled true
-//        html.destination "${buildDir}/reports/jacoco"
-        csv.enabled false
+        html.enabled false
     }
 }
 
-// always run the tests before generating the report
-codeCoverageReport.dependsOn {
-    subprojects*.test
-}
 
 project(':common') {
     dependencies {
